@@ -25,6 +25,7 @@ git-annex (8.20210311) UNRELEASED; urgency=medium
     some expensive things needed to support unlocked files.
   * Sped up git-annex init in a clone of an existing repository.
   * Fix build with attoparsec-0.14.
+  * Improved display of errors when accessing a git http remote fails.
 
  -- Joey Hess <id@joeyh.name>  Fri, 12 Mar 2021 12:06:37 -0400
 
